# mybops

./: Cargo.toml  README.md
.github/workflows/: mybops-wasm.yml  mybops-web.yml
cosmos/: Cargo.toml
cosmos/src/: lib.rs
mybops/: Cargo.toml
mybops-wasm/: Cargo.toml
mybops-wasm/pkg/: mybops_wasm.js  mybops_wasm_bg.js
mybops-wasm/src/: app.rs  base.rs  bootstrap.rs  docs.rs  edit.rs  home.rs  lib.rs  list.rs  plot.rs  random.rs  search.rs  settings.rs  tournament.rs
mybops-wasm/src/integrations/: spotify.rs
mybops-wasm/src/list/: item.rs
mybops-wasm/tests/: lib.rs  tournament.rs
mybops-wasm/www/: index.html
mybops-web/: Cargo.toml
mybops-web/src/: lib.rs  main.rs  query.rs  source.rs  user.rs
mybops-web/src/source/: setlist.rs  spotify.rs
mybops-web/tests/: integration_test.rs
mybops/src/: storage.rs
spotify/: Cargo.toml
spotify/src/: lib.rs
