[package]
name = "spotify"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
mybops = { path = "../mybops/", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
